--- a/appestrela/templates/cadastro.html
+++ b/appestrela/templates/cadastro.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="pt-br">
 
@@ -10,15 +11,15 @@
   
 
   <!-- Web page CSS -->
-  <link rel="stylesheet" href="/EstrelaResort/assets/css/cadastrocss.css" />
+  <link rel="stylesheet" href="{% static 'css/cadastrocss.css' %}" />
 
   <!-- Simple lightbox CSS -->
-  <link rel="stylesheet" href="assets/css/simple-lightbox.min.css" />
+  <link rel="stylesheet" href="{% static 'css/simple-lightbox.min.css' %}" />
 
   <!-- Favicons -->
-  <link rel="sol" sizes="180x180" href="assets/images/icon trabalho joao.png" />
-  <link rel="icon" type="image/png" sizes="32x32" href="assets/images/icon trabalho joao.png" />
-  <link rel="icon" type="image/png" sizes="16x16" href="assets/images/icon trabalho joao.png" />
+  <link rel="sol" sizes="180x180" img="{% static 'img/icon trabalho joao.png' %}" />
+  <link rel="icon" type="image/png" sizes="32x32" img="{% static 'img/icon trabalho joao.png' %}" />
+  <link rel="icon" type="image/png" sizes="16x16" img="{% static 'img/icon trabalho joao.png' %}" />
 
   <title>Estrela do Mar Resort</title>
 </head>
@@ -30,7 +31,7 @@
     <h1>
     <span class="da">Estrela do mar </span><span class="live">Resort</span>
     </h1>
-    <img  class="sol" src="assets/images/icon trabalho joao.png" alt="por do sol">
+    <img  class="sol" src="{% static 'img/icon trabalho joao.png' %}" alt="por do sol">
     </a>
 
     <div class="hamburger" id="hamburger">
@@ -69,6 +70,8 @@
 
 
 <section class="img-fundo">
+  <!-- <img src="{% static '../static/img/aguaresort.jpg' %}" alt="imagem de uma piscina"> -->
+
   <form action="{%url 'cadastro' %}" method="POST">{% csrf_token %}
     
     <div class="registro">
@@ -130,15 +133,12 @@
     <footer>&copy;2023. All Rights Reserverd</footer>
 
 
-  <!-- Web page script -->
-  <script src="assets/js/app.js"></script>
-
   <!-- Ion icons CDN -->
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   
   <!-- Simple lightbox -->
-  <script src="assets/js/simple-lightbox.min.js"></script>
-  <script src="assets/js/popup.js"></script>
+  <script src="{% static 'js/simple-lightbox.min.js' %}"></script>
+  <script src="{% static 'js/popup.js' %}"></script>
   <script>
       // Simple lightbox initializer
   </script>
