--- a/appestrela/templates/cadastro.html
+++ b/appestrela/templates/cadastro.html
@@ -77,7 +77,7 @@
     <div class="registro">
 
       <div id="ja-logado">
-        <p>Ja é logado? <a href="#">clique aqui para fazer o login</a></p>
+        <p>Ja é logado? <a href="http://127.0.0.1:8000/auth/login/">clique aqui para fazer o login</a></p>
       </div>
 
       <h1 id="h1-cadstro">Faça o cadastro agora</h1>
