--- a/appestrela/static/css/cadastrocss.css
+++ b/appestrela/static/css/cadastrocss.css
@@ -98,7 +98,7 @@ html {
      background-image: url(../img/aguaresort.jpg);
    }
    .registro{
-     margin-right: 15%;
+     margin-right: 5rem;
      width: 30rem;
      height: 35rem;
      background-color: #fff;
