--- a/appestrela/templates/index.html
+++ b/appestrela/templates/index.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="pt-br">
 
@@ -10,15 +11,15 @@
   
 
   <!-- Web page CSS -->
-  <link rel="stylesheet" href="assets/css/styles.css" />
+  <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
 
   <!-- Simple lightbox CSS -->
-  <link rel="stylesheet" href="assets/css/simple-lightbox.min.css" />
+  <link rel="stylesheet" href="{% static 'css/simple-lightbox.min.css' %}" />
 
   <!-- Favicons -->
-  <link rel="sol" sizes="180x180" href="assets/images/icon trabalho joao.png" />
-  <link rel="icon" type="image/png" sizes="32x32" href="assets/images/icon trabalho joao.png" />
-  <link rel="icon" type="image/png" sizes="16x16" href="assets/images/icon trabalho joao.png" />
+  <link rel="sol" sizes="180x180" img="{% static 'img/icon trabalho joao.png' %}" />
+  <link rel="icon" type="image/png" sizes="32x32" img="{% static 'img/icon trabalho joao.png' %}" />
+  <link rel="icon" type="image/png" sizes="16x16" img="{% static 'img/icon trabalho joao.png' %}" />
 
   <title>Estrela do Mar Resort</title>
 </head>
@@ -30,7 +31,7 @@
     <h1>
     <span class="da">Estrela do mar </span><span class="live">Resort</span>
     </h1>
-    <img  class="sol" src="assets/images/icon trabalho joao.png" alt="por do sol">
+    <img  class="sol" src="{% static 'img/icon trabalho joao.png' %}" alt="por do sol">
     </a>
 
     <div class="hamburger" id="hamburger">
@@ -107,24 +108,24 @@
   <!-- quartos suites -->
   <section class="people" id="stakeholders">
     <div class="stakeholders">
-    <div class="persons">
-    <div class="person-1">
-    <img href="#" src="assets/images/quarto-basico.jpg" alt="Quarto basico" />
-    <p href="#" class="name" id="quarto-basico"  >Quarto básico</p>
-    <p class="role">Esta acomodação inclui tv 42”, 4 camas box solteiro ou 1 casal +02 solteiro, ar condicionado, frigobar, chuveiro quente/frio, secador de cabelo, telefone com linha direta, cofre, tv a cabo, wi-fi - SEM VISTA EXTERNA E SEM LUZ NATURAL.</p>
-    </div>
-    <div class="person-2">
-    <img href="#" src="assets/images/quarto-casal.jpg" alt="Quarto casal" />
-    <p href="#" class="name" id="quarto-casal" >Quarto casal</p>
-    <p class="role">Apto com 31m, tv 42", ar condicionado, cofre, tv a cabo, telefone com linha direta, camas queen size, chuveiro quente/frio, internet wi-fi,varanda, frente mar.</p>
-    </div>
-    <div class="person-3">
-    <img href="#" src="assets/images/suite-presidencial.jpg" alt="Suite presidencial" />
-    <p href="#"class="name" id="suite-presidencial" >Suite presidencial</p>
-    <p class="role">Com Varanda Lateral e Jacuzzi.
-      Características da acomodação: -apto com 73m2, divididos em sala, banheiro com hidro para casal e quarto. 2 Smart tv 42”, 1 cama casal Super King, ar condicionado, frigobar, chuveiro quente/frio, secador de cabelo, telefone com linha direta, cofre, wi-fi, varanda com 2 chaise longe – vista  mata atlantica</p>
-    </div>
-    </div>
+      <div class="persons">
+        <div class="person-1">
+          <img href="#"/>
+          <p href="#" class="name" id="quarto-basico"  >Quarto básico</p>
+          <p class="role">Esta acomodação inclui tv 42”, 4 camas box solteiro ou 1 casal +02 solteiro, ar condicionado, frigobar, chuveiro quente/frio, secador de cabelo, telefone com linha direta, cofre, tv a cabo, wi-fi - SEM VISTA EXTERNA E SEM LUZ NATURAL.</p>
+        </div>
+        <div class="person-2">
+          <img href="#"/>
+          <p href="#" class="name" id="quarto-casal" >Quarto casal</p>
+          <p class="role">Apto com 31m, tv 42", ar condicionado, cofre, tv a cabo, telefone com linha direta, camas queen size, chuveiro quente/frio, internet wi-fi,varanda, frente mar.</p>
+        </div>
+        <div class="person-3">
+          <img href="#"/>
+          <p href="#"class="name" id="suite-presidencial" >Suite presidencial</p>
+          <p class="role">Com Varanda Lateral e Jacuzzi.
+            Características da acomodação: -apto com 73m2, divididos em sala, banheiro com hidro para casal e quarto. 2 Smart tv 42”, 1 cama casal Super King, ar condicionado, frigobar, chuveiro quente/frio, secador de cabelo, telefone com linha direta, cofre, wi-fi, varanda com 2 chaise longe – vista  mata atlantica</p>
+        </div>
+      </div>
     </div>
   </section>
   
@@ -138,7 +139,7 @@
           A gastronomia do Estrela do Mar Resort é uma celebração dos sabores do mar e da terra. Nosso menu é uma curadoria de pratos locais e internacionais, preparados com os mais frescos ingredientes da região. Os hóspedes podem esperar uma viagem culinária que inclui frutos do mar capturados no dia, carnes suculentas e uma seleção de pratos vegetarianos e veganos. Cada prato é uma obra de arte, adornado com guarnições criativas e apresentado com um toque de elegância. Com opções que vão desde o café da manhã ao jantar à luz de velas na praia, a experiência gastronômica no Estrela do Mar Resort é tão memorável quanto as ondas que beijam a nossa costa.</p>
       </div>
     
-    <img src="assets/images/cafe.jpg" alt="cafe da manhã">
+    <img src="{% static 'img/cafe.jpg' %}" alt="cafe da manhã">
     </div>
     </section >
     
@@ -146,13 +147,13 @@
 
     <section class="hero">
       <div class="eventos">
-        <img src="assets/images/evento-hotel.jpg" alt="Crianças tomando banho de piscina">
+        <img src="{% static 'img/evento-hotel.jpg' %}" alt="Crianças tomando banho de piscina">
         <div>
           <h2>Eventos</h2>
           <br>
           <p>
             O Hotel dispõe do espaço ideal para seu evento, temos um auditório e uma sala, além do anexo do Restaurante e Rooftop do Hotel, onde podem ser realizados: casamentos, confraternizações, coquetéis, aniversários, happy hour etc.
-Com infraestrutura para: reuniões, feiras, workshop, palestras e convenções.</p>
+            Com infraestrutura para: reuniões, feiras, workshop, palestras e convenções.</p>
         </div>
       
       
@@ -188,20 +189,14 @@ Com infraestrutura para: reuniões, feiras, workshop, palestras e convenções.<
     </section>
     <footer>&copy;2023. All Rights Reserverd</footer>
 
-  <!-- Scroll to top button -->
-  <i class="scroll-up" id="scroll-up"><img src="assets/icons/upward-arrow.png"
-    class="socicon up-arrow"
-     alt="up-arrow" /></i>
 
-  <!-- Web page script -->
-  <script src="assets/js/app.js"></script>
 
   <!-- Ion icons CDN -->
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 
   <!-- Simple lightbox -->
-  <script src="assets/js/simple-lightbox.min.js"></script>
-  <script src="assets/js/popup.js"></script>
+  <script src="{% static 'js/simple-lightbox.min.js' %}"></script>
+  <script src="{% static 'js/popup.js' %}"></script>
   <script>
       // Simple lightbox initializer
   </script>
