--- a/appestrela/templates/login.html
+++ b/appestrela/templates/login.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="pt-br">
 
@@ -10,16 +11,15 @@
   
 
   <!-- Web page CSS -->
-  <link rel="stylesheet" href="assets/css/logincss.css" />
+  <link rel="stylesheet" href="{% static 'css/cadastrocss.css' %}" />
 
   <!-- Simple lightbox CSS -->
-  <link rel="stylesheet" href="assets/css/simple-lightbox.min.css" />
+  <link rel="stylesheet" href="{% static 'css/simple-lightbox.min.css' %}" />
 
   <!-- Favicons -->
-  <link rel="sol" sizes="180x180" href="assets/images/icon trabalho joao.png" />
-  <link rel="icon" type="image/png" sizes="32x32" href="assets/images/icon trabalho joao.png" />
-  <link rel="icon" type="image/png" sizes="16x16" href="assets/images/icon trabalho joao.png" />
-
+  <link rel="sol" sizes="180x180" img="{% static 'img/icon trabalho joao.png' %}" />
+  <link rel="icon" type="image/png" sizes="32x32" img="{% static 'img/icon trabalho joao.png' %}" />
+  <link rel="icon" type="image/png" sizes="16x16" img="{% static 'img/icon trabalho joao.png' %}" />
   <title>Estrela do Mar Resort</title>
 </head>
 
@@ -30,7 +30,7 @@
     <h1>
     <span class="da">Estrela do mar </span><span class="live">Resort</span>
     </h1>
-    <img  class="sol" src="assets/images/icon trabalho joao.png" alt="por do sol">
+    <img  class="sol" src="{% static 'img/icon trabalho joao.png' %}" alt="por do sol">
     </a>
 
     <div class="hamburger" id="hamburger">
@@ -74,7 +74,7 @@
       <div class="registro">
 
         <div id="ja-logado">
-          <p>Ja é logado? <a href="#">clique aqui para fazer o login</a></p>
+          <p>Não e logado? <a href="http://127.0.0.1:8000/auth/cadastro/">clique aqui para fazer o Cadastro</a></p>
         </div>
 
         <h1 id="h1-cadstro">Faça o cadastro agora</h1>
@@ -122,15 +122,13 @@
     <footer>&copy;2023. All Rights Reserverd</footer>
 
 
-  <!-- Web page script -->
-  <script src="assets/js/app.js"></script>
 
   <!-- Ion icons CDN -->
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   
   <!-- Simple lightbox -->
-  <script src="assets/js/simple-lightbox.min.js"></script>
-  <script src="assets/js/popup.js"></script>
+  <script src="{% static 'js/simple-lightbox.min.js' %}"></script>
+  <script src="{% static 'js/popup.js' %}"></script>
   <script>
       // Simple lightbox initializer
   </script>
