--- a/appestrela/static/css/styles.css
+++ b/appestrela/static/css/styles.css
@@ -215,13 +215,22 @@ html {
     }
 
     .slide {
-        flex: 0 0 auto;
+        
+        flex: 1 1;
+        padding: 2% 2% 2% 2%;
+        
     }
-
-    img {
-        max-width: 100%;
-        height: auto;
+    
+    .slide img {
+        margin-left: 20%;
+        height: 10rem;
+        width: 60%;
+        border-radius: 4%;
     }
+    .slide img:hover{
+    
+        transform: scale(1.05);
+       }
 
     .prev,
     .next {
