--- a/appestrela/static/css/styles.css
+++ b/appestrela/static/css/styles.css
@@ -2,45 +2,53 @@
 
 /* CSS Variables */
 :root {
- --normal-font: 400;
- --bold-font: 600;
- --bolder-font: 900;
- --primary-color: #1798ff;
- --secondary-color: #222024;
- --line-height: 1.7rem;
- --transition: 0.4s ease-in;
+    --normal-font: 400;
+    --bold-font: 600;
+    --bolder-font: 900;
+    --primary-color: #1798ff;
+    --secondary-color: #222024;
+    --line-height: 1.7rem;
+    --transition: 0.4s ease-in;
 }
+
 /* Smooth scroll effect */
 html {
- scroll-behavior: smooth;
+    scroll-behavior: smooth;
 }
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     transition: var(--transition);
-   }
-   body {
+}
+
+body {
     font-family: "poppins", sans-serf;
-   }
-   ul li {
+}
+
+ul li {
     list-style-type: none;
-   }
-   a {
+}
+
+a {
     text-decoration: none;
     color: var(--primary-color);
-   }
-   a:hover {
-    color: var(--secondary-color);
-   }
-   .da {
-    color: var(--primary-color);
-   }
-   .live {
-    color: var(--secondary-color);
-   }
+}
 
-   nav {
+a:hover {
+    color: var(--secondary-color);
+}
+
+.da {
+    color: var(--primary-color);
+}
+
+.live {
+    color: var(--secondary-color);
+}
+
+nav {
     background: #fff;
     position: sticky;
     top: 0;
@@ -51,69 +59,83 @@ html {
     align-items: center;
     padding: 1rem 1.5rem;
     box-shadow: 2px 3px 2px #f1f1f1;
-   }
-   /* Logo e svg */
-   .sol{
-        height: 5rem;
-        width: 5rem;
-        margin-left: 1rem;
-   }
-   .logo {
+}
+
+/* Logo e svg */
+.sol {
+    height: 5rem;
+    width: 5rem;
+    margin-left: 1rem;
+}
+
+.logo {
     display: flex;
     align-items: center;
     justify-content: flex-start;
     font-size: 2rem;
-    font-weight : 500;
-   }
-   ul {
+    font-weight: 500;
+}
+
+ul {
     display: flex;
-    justify-content : space-between ;
-    align-items : center;
-   }
-   /* Itens navegação */
-   .nav-item {
-    margin-left : 2rem;
-   }
-   .nav-link {
-    font-weight : var(--bold-font);
-   }
-   .hamburger {
+    justify-content: space-between;
+    align-items: center;
+}
+
+/* Itens navegação */
+.nav-item {
+    margin-left: 2rem;
+}
+
+.nav-link {
+    font-weight: var(--bold-font);
+}
+
+.hamburger {
     display: none;
-   }
-   .bar {
+}
+
+.bar {
     background-color: #020202;
     display: block;
     width: 30px;
     height: 4px;
     margin: 6px auto;
-   }
-   /* Video mais texto */
-   .hero {
+}
+
+/* Video mais texto */
+.hero {
     display: flex;
     align-items: center;
-    justify-content : space-between ;
+    justify-content: space-between;
     max-width: 1100px;
     height: 40rem;
     margin: 2rem auto -6rem;
-   }
-   .intro-text h1 {
+}
+
+.intro-text h1 {
     font-size: 3rem;
     margin-bottom: 1rem;
-   }
-   .intro-text h3 {
+}
+
+.intro-text h3 {
     margin-bottom: 0.5rem;
-   }
-   .hero p {
+}
+
+.hero p {
     line-height: var(--line-height);
     font-size: 1rem;
-   }
-   .hear {
+}
+
+.hear {
     color: var(--primary-color);
-   }
-   .connecting {
+}
+
+.connecting {
     color: var(--secondary-color);
-   }
-   .btn {
+}
+
+.btn {
     margin-top: 1rem;
     display: inline-block;
     padding: 0.8rem 0.6rem;
@@ -121,31 +143,37 @@ html {
     font-size: 1.4rem;
     border-radius: 5px;
     color: #fff;
-   }
-   .purple {
+}
+
+.purple {
     background-color: var(--secondary-color);
     margin-right: 1.5rem;
-   }
-   .purple:hover {
+}
+
+.purple:hover {
     background-color: var(--primary-color);
     color: #fff;
-   }
-   .grey {
+}
+
+.grey {
     background-color: var(--primary-color);
-   }
-   .grey:hover {
+}
+
+.grey:hover {
     background-color: var(--secondary-color);
     color: #fff;
-   }
-   iframe {
+}
+
+iframe {
     max-width: 30rem;
     border: 10px solid var(--primary-color);
-    border-bottom : 10px solid var(--primary-color);
+    border-bottom: 10px solid var(--primary-color);
     border-right: 5px solid var(--secondary-color);
     border-left: 5px solid var(--secondary-color);
-   }
-   /* Imagem com texto em cima */
-   .about {
+}
+
+/* Imagem com texto em cima */
+.about {
     position: relative;
     background: url("../img/Vista.jpg") no-repeat center center/cover;
     height: 600px;
@@ -156,24 +184,28 @@ html {
     gap: 1.5rem;
     margin: 0rem 0;
     color: #fff;
-   }
-   .about h3 {
+}
+
+.about h3 {
     font-size: 3em;
     margin-bottom: -20px;
-   }
-   .about p {
+}
+
+.about p {
     font-size: 1.5em;
-   }
-   .about h3 {
+}
+
+.about h3 {
     text-shadow: 2px 2px 2px #333;
-   }
-   .about p {
+}
+
+.about p {
     text-shadow: 2px 2px 2px #333;
     font-size: 1.8rem;
-   }
+}
 
-    /* Imagem e pacotes */
-   .pacotes {
+/* Imagem e pacotes */
+.pacotes {
     position: relative;
     background: url("../img/paisagem2.png") no-repeat center center/cover;
     height: 600px;
@@ -186,206 +218,187 @@ html {
     margin-top: 5rem;
     margin-bottom: 5rem;
     color: #fff;
-   }
+}
 
-   .pacotes h3 {
+.pacotes h3 {
     font-size: 3em;
     margin-bottom: -20px;
-   }
-   .pacotes p {
+}
+
+.pacotes p {
     font-size: 1.5em;
-   }
-   .pacotes h3 {
+}
+
+.pacotes h3 {
     text-shadow: 2px 2px 2px #333;
-   }
-   .pacotes p {
+}
+
+.pacotes p {
     text-shadow: 2px 2px 2px #333;
     font-size: 1.8rem;
-   }
-   /* pessoas quartos e suites */
-    .carousel-container {
-        position: relative;
-        width: 100%;
-        overflow: hidden;
-    }
+}
 
-    .carousel {
-        display: flex;
-        transition: transform 0.5s ease;
-    }
+/* pessoas quartos e suites */
+.carousel-container {
+    position: relative;
+    width: 100%;
+    overflow: hidden;
+}
 
-    .slide {
-        
-        flex: 1 1;
-        padding: 2% 2% 2% 2%;
-        
-    }
-    
-    .slide img {
-        margin-left: 20%;
-        height: 10rem;
-        width: 60%;
-        border-radius: 4%;
-    }
-    .slide img:hover{
-    
-        transform: scale(1.05);
-       }
+.carousel {
+    display: flex;
+    transition: transform 0.5s ease;
+}
 
-    .prev,
-    .next {
-        position: absolute;
-        top: 50%;
-        transform: translateY(-50%);
-        background-color: #333;
-        color: #fff;
-        padding: 10px 20px;
-        border: none;
-        cursor: pointer;
-    }
+.slide {
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+    align-items: center;
+    flex: 1 1;
+    padding: 2% 2% 2% 2%;
 
-    .prev {
-        left: 0;
-    }
+}
 
-    .next {
-        right: 0;
-    }
-   .people {
-    padding: 1rem 0;
-    margin: 2rem 10% 0 10%;
-   }
-   
-   .quarto_suite{
+.slide img {
+    height: 10rem;
+    width: 18rem;
+    border-radius: 4%;
+}
+
+.slide img:hover {
+
+    transform: scale(1.05);
+}
+
+.prev,
+.next {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    background-color: transparent;
+    padding: 10px 20px;
+    border: none;
+    cursor: pointer;
+    background-repeat: no-repeat;
+    background-size: contain;
+    size: 2rem;
+}
+
+.prev svg,
+.next svg{
+    height: 4rem;
+}
+
+.prev {
+    left: 0;
+}
+
+.next {
+    right: 0;
+}
+
+
+.quarto_suite {
     display: flex;
     align-items: center;
     justify-content: center;
-   }
-   .people img{
-    height: 10rem;
-    width: 80%;
-   }
-   .people img:hover{
+}
 
-    transform: scale(1.05);
-   }
-   .person-1{
+.stakeholders {
     display: flex;
-    align-items: center;
-    flex-direction: column;
-   }
-   .person-1 img{
-    background-image: url(../img/quarto-basico.jpg);
-    background-size: cover
-   }
-   .person-2{
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-   }
-   .person-2 img{
-    background-image: url(../img/quarto-casal.jpg);
-    background-size: cover
-   }
-   .person-3{
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-   }
-   .person-3 img{
-    background-image: url(../img/suite-presidencial.jpg);
-    background-size: cover
-   }
-   .stakeholders {
-    display: flex;
-    
-   }
-   .stakeholders img {
-    
+
+}
+
+.stakeholders img {
+
     border-radius: 0.6rem;
-   }
-   .persons {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    place-items: center;
-    gap: 3rem;
-    align-items: baseline;
-   }
-   .persons p{
-    margin: 1rem 0 0 0;
-   }
+}
 
-   /* Gastronomia */
-   .gastronomia{
+
+/* Gastronomia */
+.gastronomia {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     place-items: center;
     gap: 5rem;
-   }
-   .gastronomia img{
-        width: 580px;
-        height: 420px;
-   }
+}
+
+.gastronomia img {
+    width: 580px;
+    height: 420px;
+}
 
 
-   .eventos{
+.eventos {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     place-items: center;
     gap: 5rem;
-   }
-   .eventos img{
-       width: 580px;
-       height: 420px;
-   }
-   /* Nosso pacotes */
-   .pacotes h1{
+}
+
+.eventos img {
+    width: 580px;
+    height: 420px;
+}
+
+/* Nosso pacotes */
+.pacotes h1 {
     text-shadow: 2px 2px 4px #000000;
-   }
-   #bnt-saiba-mais{
+}
+
+#bnt-saiba-mais {
     border-style: none;
     padding: 1rem 2rem 1rem 2rem;
     background-color: var(--primary-color);
     border-radius: 5px;
     color: #fff;
-   }
-   #bnt-saiba-mais:hover{
+}
+
+#bnt-saiba-mais:hover {
     transform: scale(1.05);
 
-   }
+}
+
 /* ???????? */
-   .name {
+.name {
     color: var(--primary-color);
     text-align: center;
     font-size: 25px;
-   }
-   .role {
+}
+
+.role {
     text-align: justify;
     padding: 0rem 1.5rem 0rem 1.5rem;
     font-size: 0.7rem;
-   }
+}
 
-   .subscribe {
-    margin-top : 2rem;
+.subscribe {
+    margin-top: 2rem;
     height: 10vh;
-   }
-   .subscribe h3 {
-    text-align : center;
-   }
-   form {
-    text-align : center;
+}
+
+.subscribe h3 {
+    text-align: center;
+}
+
+form {
+    text-align: center;
     margin: 0.4rem 2rem;
-   }
-   .email-sub {
+}
+
+.email-sub {
     padding: 0.2rem;
     border: 1px solid var(--primary-color);
     border-radius: 4px;
-   }
-   .email-sub:focus {
+}
+
+.email-sub:focus {
     border: 1px solid var(--secondary-color);
     outline: none;
-   }
-   .submit-btn {
+}
+
+.submit-btn {
     background-color: var(--primary-color);
     color: #fff;
     padding: 0.3rem;
@@ -393,28 +406,34 @@ html {
     border: none;
     border-radius: 2px;
     cursor: pointer;
-   }
-   .submit-btn:hover {
+}
+
+.submit-btn:hover {
     background-color: var(--secondary-color);
-   }
-   .social {
+}
+
+.social {
     text-align: center;
     margin: 2rem;
-   }
-   .socicons {
+}
+
+.socicons {
     font-size: 1.3rem;
-   }
-   footer {
+}
+
+footer {
     border-top: 1px solid #f1f1f1;
     box-shadow: 0px -2px 3px #f1f1f1;
     text-align: center;
     padding: 2rem;
-   }
-   .checkbox {
+}
+
+.checkbox {
     opacity: 0;
     position: absolute;
-   }
-   .label {
+}
+
+.label {
     width: 50px;
     height: 29px;
     background-color: #111;
@@ -424,8 +443,9 @@ html {
     border-radius: 30px;
     padding: 6px;
     position: relative;
-   }
-   .switcher {
+}
+
+.switcher {
     background-color: #fff;
     position: absolute;
     top: 5px;
@@ -433,94 +453,136 @@ html {
     height: 20px;
     width: 20px;
     border-radius: 50%;
-   }
-   .moon {
+}
+
+.moon {
     color: #ffa502;
-   }
-   .sun {
+}
+
+.sun {
     color: #ff4757;
-   }
-   .checkbox:checked + .label .switcher {
+}
+
+.checkbox:checked+.label .switcher {
     transform: translateX(24px);
-   }
-   
-   body.dark {
+}
+
+body.dark .prev svg,
+body.dark .next svg{
+    height: 3rem;
+    fill: #1798ff;
+}
+body.dark {
     background-color: #1e272e;
-   }
-   body.dark .bar {
+}
+
+body.dark .bar {
     background-color: #fff;
-   }
-   body.dark p {
+}
+
+body.dark p {
     color: #fff;
-   }
-   body.dark h3 {
+}
+
+body.dark h3 {
     color: #fff;
-   }
-   body.dark nav {
+}
+
+body.dark nav {
     background-color: #1e272e;
     box-shadow: 2px 3px 2px #111010;
-   }
-   body.dark ul {
+}
+
+body.dark ul {
     background-color: #1e272e;
-   }
-   body.dark .name {
+}
+
+body.dark .name {
     color: var(--primary-color);
-   }
-   body.dark .role {
+}
+
+body.dark .role {
     color: var(--secondary-color);
-   }
-   body.dark footer {
+}
+
+body.dark footer {
     color: #fff;
     border-top: 1px solid #111010;
     box-shadow: 0px -2px 3px #111010;
-   }
-   body.dark .connecting {
+}
+
+body.dark .connecting {
     color: #fff;
-   }
-   body.dark .live {
+}
+
+body.dark .live {
     color: #fff;
-   }
-   body.dark h2{
+}
+
+body.dark h2 {
     color: var(--primary-color);
-   }
-   body.dark .role{
+}
+
+body.dark .role {
     color: #fff;
-   }
-   
+}
+@media screen and (max-width: 320px){
+    body{
+        max-width: 325px;
+    }
+    .slide img{
+        width: 15rem;
+    }
+    nav{
+        width: 325px; 
+    }
+}
 /* Para Tablet */
-   @media screen and (max-width: 768px) {
-    .quarto_suite{
+@media screen and (max-width: 768px) {
+    body {
+        max-width: 768px;
+        overflow-x: hidden;
+    }
+
+    .logo h1 {
+        font-size: 1em;
+    }
+
+    .quarto_suite {
         margin-top: 20rem;
-        
+
     }
-    .people{
-        margin-top: 1rem;
-    }
-    .gastronomia img{
+
+
+    .gastronomia img {
         max-width: 100%;
         height: auto;
     }
-    .eventos{
+
+    .eventos {
         margin-top: 20rem;
     }
-    .eventos img{
+
+    .eventos img {
         max-width: 100%;
         height: auto;
     }
-    .pacotes{
+
+    .pacotes {
         margin-top: 30rem;
     }
+
     iframe {
         margin-top: 2rem;
         max-width: 330px;
     }
 
     .hamburger {
-    display: block;
-    cursor: pointer;
+        display: block;
+        cursor: pointer;
     }
 
-    
+
     ul {
         background-color: #fff;
         flex-direction: column;
@@ -534,6 +596,7 @@ html {
     ul.active {
         left: 0;
     }
+
     .nav-item {
         margin: 2rem 0;
     }
@@ -541,101 +604,135 @@ html {
     .hamburger.active .bar:nth-child(2) {
         opacity: 0;
     }
+
     .hamburger.active .bar:nth-child(1) {
         transform: translateY(10px) rotate(45deg);
     }
+
     .hamburger.active .bar:nth-child(3) {
         transform: translateY(-10px) rotate(-45deg);
     }
-    @media screen and (max-width: 420px) {
+
+    .logo {
+        font-size: 1.5rem;
+    }
+
+    .hero {
+        flex-direction: column;
+        max-width: 500px;
+    }
+
+    .intro-text h1 {
+        font-size: 2.3rem;
+    }
+
+    .btn {
+        padding: 0.5rem;
+        font-size: 1.2rem;
+    }
+
+    iframe {
+        max-width: 26rem;
+    }
+
+    .about {
+        text-align: center;
+    }
+
+    .gastronomia {
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .eventos {
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .eventos img {
+        margin-top: 3rem;
+    }
+
+    /* Para celular */
+}
+
+@media screen and (max-width: 426px) {
     .hero {
         max-width: 330px;
     }
+    
     .intro-text h1 {
         font-size: 2rem;
     }
+    
     iframe {
         max-width: 330px;
     }
+    .carousel{
+        margin-left: 3rem;
     }
-    .logo {
-        font-size: 1.5rem;
-        }
-        .hero {
-        flex-direction: column;
-        max-width: 500px;
-        }
-        .intro-text h1 {
-        font-size: 2.3rem;
-        }
-        .btn {
-        padding: 0.5rem;
-        font-size: 1.2rem;
-        }
-        iframe {
-        max-width: 26rem;
-        }
-        .about {
-        text-align: center;
-        }
-        .persons {
-        grid-template-columns: repeat(1, 1fr);
-        }
-        .gastronomia {
-        grid-template-columns: repeat(1, 1fr);
-        }
-        .eventos {
-            grid-template-columns: repeat(1, 1fr);
-        }
-        .eventos img{
-            margin-top: 3rem;
-        }
-    /* Para celular */
+    .quarto_suite{
+        margin-top: 27rem;
     }
-    @media screen and (max-width: 425px) {
+}
 
-        .logo h1{
-            display: none;
-        }
-        body{
-            width: 100%;
-        }
-        .intro-text h1 {
-            font-size: 2rem;
-        }
-        iframe {
-            margin-top: 2rem;
-            max-width: 330px;
-        }
-        .hero {
-            max-width: 330px;
-        }
-        .quarto_suite{
-            margin-top: 29rem;
-            
-        }
-        .people{
-            margin-top: 1rem;
-        }
-        .gastronomia img{
-            max-width: 100%;
-            height: auto;
-        }
-        .eventos{
-            margin-top: 20rem;
-        }
-        .eventos img{
-            max-width: 100%;
-            height: auto;
-        }
-        .pacotes{
-            margin-top: 30rem;
-        }
-        .about p{
-         font-size: 15px;
-        }
-        .about h3{
-            font-size: 30px;
-        }
-    }       
+@media screen and (max-width: 425px) {
     
+    .logo h1 {
+        display: none;
+    }
+
+    body {
+        width: 100%;
+    }
+
+    .intro-text h1 {
+        font-size: 2rem;
+    }
+
+    iframe {
+        margin-top: 2rem;
+        max-width: 330px;
+    }
+
+
+    .quarto_suite {
+        margin-top: 29rem;
+
+    }
+
+    .gastronomia img {
+        max-width: 100%;
+        height: auto;
+    }
+
+    .eventos {
+        margin-top: 20rem;
+    }
+
+    .eventos img {
+        max-width: 100%;
+        height: auto;
+    }
+
+    .pacotes {
+        margin-top: 30rem;
+    }
+
+    .about p {
+        font-size: 15px;
+    }
+
+    .about h3 {
+        font-size: 30px;
+    }
+}
+@media screen and (max-width: 319px){
+    body{
+        max-width: 400px;
+    }
+    .slide img{
+        width: 15rem;
+    }
+    nav{
+        max-width: 400px; 
+    }
+}
