--- a/appestrela/templates/index.html
+++ b/appestrela/templates/index.html
@@ -118,8 +118,10 @@
             </div>
         {% endfor %}
     </div>
-    <button class="prev"><img src="" alt=""></button>
-    <button class="next">Próximo</button>
+    <button class="prev"><svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="70px" height="306px" viewBox="0 0 306 306" style="enable-background:new 0 0 306 306;" xml:space="preserve"><g><g id="chevron-left"><polygon points="247.35,35.7 211.65,0 58.65,153 211.65,306 247.35,270.3 130.05,153"/></g></g></svg>
+    </button>
+    <button class="next"><svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="70px" height="306px" viewBox="0 0 306 306" style="enable-background:new 0 0 306 306;" xml:space="preserve"><g><g id="chevron-right"><polygon points="94.35,0 58.65,35.7 175.95,153 58.65,270.3 94.35,306 247.35,153"/></g></g></svg>
+    </button>
 </div>
 
   <!-- Gastronomia -->
