--- a/appestrela/templates/index.html
+++ b/appestrela/templates/index.html
@@ -123,6 +123,11 @@
     <button class="next"><svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="70px" height="306px" viewBox="0 0 306 306" style="enable-background:new 0 0 306 306;" xml:space="preserve"><g><g id="chevron-right"><polygon points="94.35,0 58.65,35.7 175.95,153 58.65,270.3 94.35,306 247.35,153"/></g></g></svg>
     </button>
 </div>
+  <!-- Botão lista de quartos -->
+    <div id="todos_quartos">
+      <h2>Todos os quatos</h2>
+      <button class="bntredirect"><a href="http://127.0.0.1:8000/posts/">Ir para quatos</a></button>
+    </div>
 
   <!-- Gastronomia -->
     <section class="hero">
@@ -158,7 +163,7 @@
   <!-- pacotes -->
   <section class="pacotes" id="pacotes">
     <h1>Nossos Pacotes</h1>
-    <button id="bnt-saiba-mais">Saiba Mais</button>
+    <button class="bntredirect"><a href="">Saiba Mais</a></button>
   </section>
   
 
