--- a/appestrela/templates/posts/post_list.html
+++ b/appestrela/templates/posts/post_list.html
@@ -1,15 +1,113 @@
+{%load static%}
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
- <meta charset="UTF-8" >
- <title> Lista de Posts </title>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+
+
+    <!-- Web page CSS -->
+    <link rel="stylesheet" href="{% static 'css/postlist.css' %}" />
+
+    <!-- Simple lightbox CSS -->
+    <link rel="stylesheet" href="{% static 'css/simple-lightbox.min.css' %}" />
+
+    <!-- Favicons -->
+    <link rel="sol" sizes="180x180" img="{% static 'img/icon trabalho joao.png' %}" />
+    <link rel="icon" type="image/png" sizes="32x32" img="{% static 'img/icon trabalho joao.png' %}" />
+    <link rel="icon" type="image/png" sizes="16x16" img="{% static 'img/icon trabalho joao.png' %}" />
+
+    <title>Estrela do Mar Resort</title>
 </head>
+
 <body>
- <h1>Lista de Posts </h1>
- <ul>
- {% for post in posts %}
- <li><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></li>
- {% endfor %}
- </ul>
+    <!-- Navbar -->
+    <nav>
+        <a href="#" class="logo">
+            <h1>
+                <span class="da">Estrela do mar </span><span class="live">Resort</span>
+            </h1>
+            <img class="sol" src="{% static 'img/icon trabalho joao.png'%}" alt="por do sol">
+        </a>
+
+        <div class="hamburger" id="hamburger">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </div>
+
+        <ul>
+            <li class="nav-item">
+                <a href="#about" class="nav-link" id="nav-link">Sobre</a>
+            </li>
+            <li class="nav-item">
+                <a href="#stars" class="nav-link" id="nav-link">Quartos</a>
+            </li>
+            <li class="nav-item">
+                <a href="#stakeholders " class="nav-link" id="nav-link">Paisagens</a>
+            </li>
+            <li class="nav-item">
+                <a href="#subscribe " class="nav-link" id="nav-link">Check In</a>
+            </li>
+        </ul>
+        <!-- Dark/light theme switcher -->
+        <div class="theme-switch">
+            <input type="checkbox" class="checkbox" id="checkbox" />
+            <label for="checkbox" class="label">
+                <ion-icon name="partly-sunny-outline" class="sun"></ion-icon>
+                <ion-icon name="moon-outline" class="moon"></ion-icon>
+                <div class="switcher"></div>
+            </label>
+        </div>
+    </nav>
+    <!-- Fim do nav bar -->
+
+    <h2 id="listadq">Lista de Quartos </h2>
+    <div class="quartos">
+        {% for post in posts %}
+        <div class="item_quarto">
+            <img href="#" src="{{ post.image.url }}"/>
+            <li><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></li>
+        </div>
+        {% endfor %}
+    </div>
+    <!-- Email subscription -->
+    <section class="subscribe" id="subscribe">
+        <h3>Faça já sua reserva</h3>
+        <form action="#">
+            <input type="email" name="email" id="email-sub" class="email-sub" required />
+            <input type="submit" value="Submit" id="submit-btn" class="submit-btn" />
+        </form>
+    </section>
+
+
+    <!-- Social icons -->
+    <section class="social">
+        <h3>Conecte-se conosco</h3>
+        <div class="socicons">
+            <a href="#"> <ion-icon name="logo-twitter"></ion-icon> </a>
+            <a href="#"> <ion-icon name="logo-instagram"></ion-icon> </a>
+            <a href="#"> <ion-icon name="logo-facebook"></ion-icon> </a>
+        </div>
+    </section>
+    <footer>&copy;2023. All Rights Reserverd</footer>
+
+
+    <!-- Web page script -->
+    <script src="{% static 'js/app.js'%}"></script>
+
+    <!-- Ion icons CDN -->
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+
+    <!-- Simple lightbox -->
+    <script src="{% static 'js/simple-lightbox.min.js'%}"></script>
+    <script src="{% static 'js/popup.js'%}"></script>
+    <script>
+        // Simple lightbox initializer
+    </script>
 </body>
+
 </html>
