--- a/appestrela/templates/index.html
+++ b/appestrela/templates/index.html
@@ -182,7 +182,7 @@
   <section class="social">
     <h3>Conecte-se conosco</h3>
     <div class="socicons">
-    <a href="#"> <ion-icon name="logo-twitter"></ion-icon> </a>
+    <a href="#g"><ion-icon name="logo-xing"></ion-icon></a>
     <a href="https://www.instagram.com/joaod_tx/"> <ion-icon name="logo-instagram"></ion-icon> </a>
     <a href="#"> <ion-icon name="logo-facebook"></ion-icon> </a>
     </div>
